--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Zheng-wei Wang
 
 # Short description of your site
 description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Some Person
+author: Zheng-wei Wang
 
 # --- List of links in the navigation bar --- #
 
