--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ author: Zheng-wei Wang
 navbar-links:
   About Me: "aboutme"
   Research: "research"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+#   Resources:
+#     - Beautiful Jekyll: "https://beautifuljekyll.com"
+#     - Learn markdown: "https://www.markdowntutorial.com/"
 #   Author's home: "https://deanattali.com"
 
 # --- Logo --- #
