--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: Zheng-wei Wang
+title: Zheng-wei Wang (王正蔚)
 
 # Short description of your site
 description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Zheng-wei Wang
+author: Zheng-wei Wang (王正蔚)
 
 # --- List of links in the navigation bar --- #
 
@@ -40,7 +40,7 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "villa.wang.zhengwei@gmail.com"
-  twitter: "https://twitter.com/wangvilla"
+  twitter: "wangvilla"
   github: "https://github.com/villawang"
   linkedin: "https://www.linkedin.com/in/zhengwei-wang-2710a99b/"
   rss: true
