--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ round-avatar: true
 social-network-links:
   email: "villa.wang.zhengwei@gmail.com"
   twitter: "wangvilla"
-  github: "https://github.com/villawang"
-  linkedin: "https://www.linkedin.com/in/zhengwei-wang-2710a99b/"
+  github: "villawang"
+  linkedin: "zhengwei-wang-2710a99b/"
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
