--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Zheng-wei Wang (王正蔚)
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+#   About Me: "aboutme"
   Research: "research"
 #   Resources:
 #     - Beautiful Jekyll: "https://beautifuljekyll.com"
