--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social-network-links:
   twitter: "wangvilla"
   github: "villawang"
   linkedin: "zhengwei-wang-2710a99b/"
-  rss: true
+#   rss: true
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
