--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: Zheng-wei Wang (王正蔚)
 navbar-links:
 #   Aboutme: "aboutme"
   Research: "research"
+  News: "news"
 #   Resources:
 #     - Beautiful Jekyll: "https://beautifuljekyll.com"
 #     - Learn markdown: "https://www.markdowntutorial.com/"
